--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -30,6 +30,7 @@
     <ClInclude Include="..\src\entities\message.h" />
     <ClInclude Include="..\src\globals.h" />
     <ClInclude Include="..\src\gui\gui.h" />
+    <ClInclude Include="..\src\gui\menu.h" />
     <ClInclude Include="..\src\gui\menu_item.h" />
     <ClInclude Include="..\src\gui\string_manager.h" />
     <ClInclude Include="..\src\input\input_manager.h" />
@@ -49,6 +50,7 @@
     <ClCompile Include="..\src\entities\components\component.cpp" />
     <ClCompile Include="..\src\entities\entity.cpp" />
     <ClCompile Include="..\src\gui\gui.cpp" />
+    <ClCompile Include="..\src\gui\menu.cpp" />
     <ClCompile Include="..\src\gui\menu_item.cpp" />
     <ClCompile Include="..\src\gui\string_manager.cpp" />
     <ClCompile Include="..\src\input\input_manager.cpp" />
