C4 and Life redone. -1 means invencible

--- a/data/config.json
+++ b/data/config.json
@@ -56,7 +56,13 @@
 		"fireRate": 0,
 		"reloadTime": 0,
 		"capacity": 1,
-		"bulletLife": 1
+		"bulletSpeed": 0,
+		"bulletDamage": 0,
+		"bulletLife": -1,
+		"bulletRange": 0,
+		"isAutomatic": false,
+		"isExplossive": true,
+		"isBouncy": false
 	},
 	{
 		"type": "rocket launcher",
