--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -30,8 +30,11 @@
     <ClInclude Include="..\src\entities\entity.h" />
     <ClInclude Include="..\src\entities\message.h" />
     <ClInclude Include="..\src\globals.h" />
+    <ClInclude Include="..\src\gui\button.h" />
+    <ClInclude Include="..\src\gui\checkbox.h" />
     <ClInclude Include="..\src\gui\gui.h" />
     <ClInclude Include="..\src\gui\menu.h" />
+    <ClInclude Include="..\src\gui\slider.h" />
     <ClInclude Include="..\src\gui\string_manager.h" />
     <ClInclude Include="..\src\input\input_manager.h" />
     <ClInclude Include="..\src\scenes\app_manager.h" />
@@ -48,8 +51,11 @@
     <ClCompile Include="..\src\engine\sound_engine.cpp" />
     <ClCompile Include="..\src\entities\components\component.cpp" />
     <ClCompile Include="..\src\entities\entity.cpp" />
+    <ClCompile Include="..\src\gui\button.cpp" />
+    <ClCompile Include="..\src\gui\checkbox.cpp" />
     <ClCompile Include="..\src\gui\gui.cpp" />
     <ClCompile Include="..\src\gui\menu.cpp" />
+    <ClCompile Include="..\src\gui\slider.cpp" />
     <ClCompile Include="..\src\gui\string_manager.cpp" />
     <ClCompile Include="..\src\input\input_manager.cpp" />
     <ClCompile Include="..\src\main.cpp" />
@@ -60,7 +66,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC0EB618-AC99-4DFE-A4E1-534AD384C3A1}</ProjectGuid>
     <RootNamespace>dead_line_revenge</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>dead_line_revenge</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
