--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -31,6 +31,18 @@
     <Filter Include="lib\ppk_assert">
       <UniqueIdentifier>{7d90a138-bc12-4c88-ac98-97270e52aa78}</UniqueIdentifier>
     </Filter>
+    <Filter Include="lib\tinyxml">
+      <UniqueIdentifier>{beb26093-591d-4818-b2a0-31e78f903d09}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\entities\components\behavior_tree">
+      <UniqueIdentifier>{c833c206-a729-44bd-a32a-6c4541eff151}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\entities\components\behavior_tree\actions">
+      <UniqueIdentifier>{cb18291a-3f14-4dbb-92b2-582dd3044e14}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\entities\components\behavior_tree\conditions">
+      <UniqueIdentifier>{0c481f85-943c-4147-980c-83b8c6610432}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\globals.h">
@@ -105,6 +117,54 @@
     <ClInclude Include="..\lib\ppk_assert\ppk_assert.h">
       <Filter>lib\ppk_assert</Filter>
     </ClInclude>
+    <ClInclude Include="..\lib\tinyxml\tinystr.h">
+      <Filter>lib\tinyxml</Filter>
+    </ClInclude>
+    <ClInclude Include="..\lib\tinyxml\tinyxml.h">
+      <Filter>lib\tinyxml</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\change_sprite.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\chase.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\death.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\hit.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\idle.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_dead.h">
+      <Filter>src\entities\components\behavior_tree\conditions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_distance.h">
+      <Filter>src\entities\components\behavior_tree\conditions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_hit.h">
+      <Filter>src\entities\components\behavior_tree\conditions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\behavior.h">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\behavior_tree.h">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\group.h">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\selector.h">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\sequence.h">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\bossIAComponent.h">
+      <Filter>src\entities\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -178,6 +238,60 @@
     </ClCompile>
     <ClCompile Include="..\lib\ppk_assert\ppk_assert.cpp">
       <Filter>lib\ppk_assert</Filter>
+    </ClCompile>
+    <ClCompile Include="..\lib\tinyxml\tinystr.cpp">
+      <Filter>lib\tinyxml</Filter>
+    </ClCompile>
+    <ClCompile Include="..\lib\tinyxml\tinyxml.cpp">
+      <Filter>lib\tinyxml</Filter>
+    </ClCompile>
+    <ClCompile Include="..\lib\tinyxml\tinyxmlerror.cpp">
+      <Filter>lib\tinyxml</Filter>
+    </ClCompile>
+    <ClCompile Include="..\lib\tinyxml\tinyxmlparser.cpp">
+      <Filter>lib\tinyxml</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\change_sprite.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\chase.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\death.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\hit.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\idle.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_dead.cpp">
+      <Filter>src\entities\components\behavior_tree\conditions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_distance.cpp">
+      <Filter>src\entities\components\behavior_tree\conditions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_hit.cpp">
+      <Filter>src\entities\components\behavior_tree\conditions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\behavior.cpp">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\behavior_tree.cpp">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\group.cpp">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\selector.cpp">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\sequence.cpp">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\bossIAComponent.cpp">
+      <Filter>src\entities\components</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
