--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -165,6 +165,12 @@
     <ClInclude Include="..\src\entities\components\bossIAComponent.h">
       <Filter>src\entities\components</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\entities\components\LifeComponent.h">
+      <Filter>src\entities\components</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\MovementComponent.h">
+      <Filter>src\entities\components</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -291,6 +297,12 @@
       <Filter>src\entities\components\behavior_tree</Filter>
     </ClCompile>
     <ClCompile Include="..\src\entities\components\bossIAComponent.cpp">
+      <Filter>src\entities\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\LifeComponent.cpp">
+      <Filter>src\entities\components</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\MovementComponent.cpp">
       <Filter>src\entities\components</Filter>
     </ClCompile>
   </ItemGroup>
