--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -37,6 +37,7 @@
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\idle.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\behavior.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\behavior_tree.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\blackboard.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_dead.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_distance.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_hit.h" />
@@ -84,6 +85,7 @@
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\idle.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\behavior.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\behavior_tree.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\blackboard.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_dead.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_distance.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_hit.cpp" />
@@ -111,7 +113,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC0EB618-AC99-4DFE-A4E1-534AD384C3A1}</ProjectGuid>
     <RootNamespace>dead_line_revenge</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
     <ProjectName>dead_line_revenge</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
