--- a/data/config.json
+++ b/data/config.json
@@ -1,111 +1,126 @@
 {
-	"weapons": [
-	{
-		"type": "revolver",
-		"id": 0,
-		"fireRate": 20,
-		"reloadTime": 60,
-		"capacity": 6,
-		"bulletSpeed": 6,
-		"bulletDamage": -2,
-		"bulletLife": 1,
-		"bulletRange": 60,
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"soundFile": "data/shot.wav"
-	},
-	{
-		"type": "machinegun",
-		"id": 1,
-		"fireRate": 10,
-		"reloadTime": 80,
-		"capacity": 20,
-		"bulletSpeed": 8,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": 0,
-		"isAutomatic": true,
-		"isExplossive": false,
-		"isBouncy": false,
-		"soundFile": "data/shot.wav"
-	},
-	{
-		"type": "shotgun",
-		"id": 2,
-		"fireRate": 0,
-		"reloadTime": 50,
-		"capacity": 2,
-		"bulletSpeed": 4,
-		"bulletDamage": -1,
-		"bulletLife": 2,
-		"bulletRange": 40,
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": true,
-		"soundFile": "data/shotgun.wav"
-	},
-	{
-		"type": "mines",
-		"id": 3,
-		"fireRate": 0,
-		"reloadTime": 120,
-		"capacity": 1,
-		"bulletSpeed": 0,
-		"bulletDamage": 0,
-		"bulletLife": 1,
-		"bulletRange": 0,
-		"isAutomatic": false,
-		"isExplossive": true,
-		"isBouncy": false,
-		"soundFile": "data/mine.wav"
-	},
-	{
-		"type": "c4",
-		"id": 4,
-		"fireRate": 0,
-		"reloadTime": 0,
-		"capacity": 1,
-		"bulletSpeed": 0,
-		"bulletDamage": 0,
-		"bulletLife": -1,
-		"bulletRange": 0,
-		"isAutomatic": false,
-		"isExplossive": true,
-		"isBouncy": false,
-		"soundFile": "data/mine.wav"
-	},
-	{
-		"type": "rocket launcher",
-		"id": 5,
-		"fireRate": 0,
-		"reloadTime": 100,
-		"capacity": 1,
-		"bulletSpeed": 5,
-		"bulletDamage": -1,
-		"bulletLife": 1,
-		"bulletRange": 0,
-		"isAutomatic": false,
-		"isExplossive": true,
-		"isBouncy": false,
-		"soundFile": "data/rocketlauncher.wav"
-	},
-	{
-		"type": "nuclear bomb",
-		"id": 6,
-		"fireRate": 0,
-		"reloadTime": 0,
-		"capacity": 1,
-		"bulletSpeed": 0,
-		"bulletDamage": 0,
-		"bulletLife": 0,
-		"bulletRange": 0,
-		"isAutomatic": false,
-		"isExplossive": false,
-		"isBouncy": false,
-		"soundFile": ""
-	}
-	],
+  "weapons": [
+    {
+      "type": "revolver",
+      "id": 0,
+      "fireRate": 20,
+      "reloadTime": 60,
+      "capacity": 6,
+      "bulletSpeed": 6,
+      "bulletDamage": -2,
+      "bulletLife": 1,
+      "bulletRange": 60,
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "soundFile": "data/shot.wav"
+    },
+    {
+      "type": "machinegun",
+      "id": 1,
+      "fireRate": 10,
+      "reloadTime": 80,
+      "capacity": 20,
+      "bulletSpeed": 8,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": 0,
+      "isAutomatic": true,
+      "isExplossive": false,
+      "isBouncy": false,
+      "soundFile": "data/shot.wav"
+    },
+    {
+      "type": "shotgun",
+      "id": 2,
+      "fireRate": 0,
+      "reloadTime": 50,
+      "capacity": 2,
+      "bulletSpeed": 4,
+      "bulletDamage": -1,
+      "bulletLife": 2,
+      "bulletRange": 40,
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": true,
+      "soundFile": "data/shotgun.wav"
+    },
+    {
+      "type": "mines",
+      "id": 3,
+      "fireRate": 0,
+      "reloadTime": 120,
+      "capacity": 1,
+      "bulletSpeed": 0,
+      "bulletDamage": 0,
+      "bulletLife": 1,
+      "bulletRange": 0,
+      "isAutomatic": false,
+      "isExplossive": true,
+      "isBouncy": false,
+      "soundFile": "data/mine.wav"
+    },
+    {
+      "type": "c4",
+      "id": 4,
+      "fireRate": 0,
+      "reloadTime": 0,
+      "capacity": 1,
+      "bulletSpeed": 0,
+      "bulletDamage": 0,
+      "bulletLife": -1,
+      "bulletRange": 0,
+      "isAutomatic": false,
+      "isExplossive": true,
+      "isBouncy": false,
+      "soundFile": "data/mine.wav"
+    },
+    {
+      "type": "rocket launcher",
+      "id": 5,
+      "fireRate": 0,
+      "reloadTime": 100,
+      "capacity": 1,
+      "bulletSpeed": 5,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": 0,
+      "isAutomatic": false,
+      "isExplossive": true,
+      "isBouncy": false,
+      "soundFile": "data/rocketlauncher.wav"
+    },
+    {
+      "type": "nuclear bomb",
+      "id": 6,
+      "fireRate": 0,
+      "reloadTime": 0,
+      "capacity": 1,
+      "bulletSpeed": 0,
+      "bulletDamage": 0,
+      "bulletLife": 0,
+      "bulletRange": 0,
+      "isAutomatic": false,
+      "isExplossive": false,
+      "isBouncy": false,
+      "soundFile": ""
+    },
+    {
+      "type": "boss",
+      "id": 7,
+      "fireRate": 20,
+      "reloadTime": 200,
+      "capacity": 2,
+      "bulletSpeed": 8,
+      "bulletDamage": -1,
+      "bulletLife": 1,
+      "bulletRange": 0,
+      "isAutomatic": true,
+      "isExplossive": false,
+      "isBouncy": false,
+      "soundFile": ""
+    }
+  ],
 	"enemies": [
 	{
 		"type": "melee",
