--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -33,8 +33,10 @@
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\change_sprite.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\chase.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\death.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\goto_random.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\hit.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\idle.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\wait.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\behavior.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\behavior_tree.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\blackboard.h" />
@@ -81,8 +83,10 @@
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\change_sprite.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\chase.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\death.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\goto_random.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\hit.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\idle.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\wait.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\behavior.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\behavior_tree.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\blackboard.cpp" />
@@ -113,7 +117,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{CC0EB618-AC99-4DFE-A4E1-534AD384C3A1}</ProjectGuid>
     <RootNamespace>dead_line_revenge</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>dead_line_revenge</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
