--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="..\src\entities\components\behavior_tree\blackboard.h">
       <Filter>src\entities\components\behavior_tree</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\goto_random.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\wait.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -310,6 +316,12 @@
     </ClCompile>
     <ClCompile Include="..\src\entities\components\behavior_tree\blackboard.cpp">
       <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\goto_random.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\wait.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
