--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -30,11 +30,19 @@
     <ClInclude Include="..\src\common\sys.h" />
     <ClInclude Include="..\src\engine\graphics_engine.h" />
     <ClInclude Include="..\src\engine\sound_engine.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\aim_player.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\change_sprite.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\change_weapon.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\chase.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\check_life.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\death.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\fire.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\goto_player.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\goto_random.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\hit.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\actions\idle.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\rotate_aim.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\wait.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\behavior.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\behavior_tree.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\blackboard.h" />
@@ -42,6 +50,7 @@
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_distance.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\conditions\check_hit.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\group.h" />
+    <ClInclude Include="..\src\entities\components\behavior_tree\repeat.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\selector.h" />
     <ClInclude Include="..\src\entities\components\behavior_tree\sequence.h" />
     <ClInclude Include="..\src\entities\components\bossIAComponent.h" />
@@ -78,11 +87,19 @@
     <ClCompile Include="..\src\common\sys_win.cpp" />
     <ClCompile Include="..\src\engine\graphics_engine.cpp" />
     <ClCompile Include="..\src\engine\sound_engine.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\aim_player.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\change_sprite.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\change_weapon.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\chase.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\check_life.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\death.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\fire.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\goto_player.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\goto_random.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\hit.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\actions\idle.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\rotate_aim.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\wait.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\behavior.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\behavior_tree.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\blackboard.cpp" />
@@ -90,6 +107,7 @@
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_distance.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\conditions\check_hit.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\group.cpp" />
+    <ClCompile Include="..\src\entities\components\behavior_tree\repeat.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\selector.cpp" />
     <ClCompile Include="..\src\entities\components\behavior_tree\sequence.cpp" />
     <ClCompile Include="..\src\entities\components\bossIAComponent.cpp" />
