--- a/project/dead_line_revenge.vcxproj.filters
+++ b/project/dead_line_revenge.vcxproj.filters
@@ -174,6 +174,33 @@
     <ClInclude Include="..\src\entities\components\behavior_tree\blackboard.h">
       <Filter>src\entities\components\behavior_tree</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\goto_random.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\wait.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\fire.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\change_weapon.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\check_life.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\repeat.h">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\rotate_aim.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\aim_player.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\components\behavior_tree\actions\goto_player.h">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\main.cpp">
@@ -310,6 +337,33 @@
     </ClCompile>
     <ClCompile Include="..\src\entities\components\behavior_tree\blackboard.cpp">
       <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\goto_random.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\wait.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\fire.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\change_weapon.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\check_life.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\repeat.cpp">
+      <Filter>src\entities\components\behavior_tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\rotate_aim.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\aim_player.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\entities\components\behavior_tree\actions\goto_player.cpp">
+      <Filter>src\entities\components\behavior_tree\actions</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
