--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="..\src\gui\slider.h" />
     <ClInclude Include="..\src\gui\string_manager.h" />
     <ClInclude Include="..\src\input\input_manager.h" />
+    <ClInclude Include="..\src\REG_WEAPONS.h" />
     <ClInclude Include="..\src\scenes\app_manager.h" />
     <ClInclude Include="..\src\scenes\app_mode.h" />
     <ClInclude Include="..\src\scenes\world.h" />
