--- a/project/dead_line_revenge.vcxproj
+++ b/project/dead_line_revenge.vcxproj
@@ -69,8 +69,10 @@
     <ClInclude Include="..\src\gui\string_manager.h" />
     <ClInclude Include="..\src\input\input_manager.h" />
     <ClInclude Include="..\src\REG_WEAPONS.h" />
-    <ClInclude Include="..\src\scenes\app_manager.h" />
-    <ClInclude Include="..\src\scenes\app_mode.h" />
+    <ClInclude Include="..\src\scenes\game_scene.h" />
+    <ClInclude Include="..\src\scenes\menu_scene.h" />
+    <ClInclude Include="..\src\scenes\scene.h" />
+    <ClInclude Include="..\src\scenes\scene_manager.h" />
     <ClInclude Include="..\src\scenes\world.h" />
   </ItemGroup>
   <ItemGroup>
@@ -125,8 +127,9 @@
     <ClCompile Include="..\src\gui\string_manager.cpp" />
     <ClCompile Include="..\src\input\input_manager.cpp" />
     <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\scenes\app_manager.cpp" />
-    <ClCompile Include="..\src\scenes\app_mode.cpp" />
+    <ClCompile Include="..\src\scenes\game_scene.cpp" />
+    <ClCompile Include="..\src\scenes\menu_scene.cpp" />
+    <ClCompile Include="..\src\scenes\scene_manager.cpp" />
     <ClCompile Include="..\src\scenes\world.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
